--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "nanoid": "^4.0.2",
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "yargs": "^17.7.2"
   }
 }
